Calendar icon size is too small in canvas theme. Fixed.

--- a/themes/canvas/default.css
+++ b/themes/canvas/default.css
@@ -91,6 +91,11 @@ div.date_box a:focus {
 div.date_box a:hover {
 	text-decoration: none;
 }
+div.date_box i {
+	font-size: 1.5em;
+	vertical-align: middle;
+	margin-top: -1px;
+}
 input.big {
 	width: 100px;
 }
